@@ -28,6 +28,7 @@ PLAYER_SPEED = 300
 PLAYER_HIT_RECT = pg.Rect(0, 0, 60, 90)
 PLAYER_HEALTH = 100
 PLAYER_ATTACK_DELAY = 500
+PLAYER_DAMAGE_MITIGATION_TIME = 100
 
 # Weapon Settings
 WEAPON_RANGE = 200
